# bob-management

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  config.yaml  docker-compose.yaml  rustc-ice-2023-12-01T22_00_53-506813.txt
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: changelog-updated.yml  docker-image.yml  frontend.yml  gen-openapi.yml  rust.yml
api/: openapi.json  openapi.yaml
backend/: Cargo.toml  gen_openapi.rs
backend/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  router.rs
backend/src/connector/: api.rs  client.rs  context.rs  dto.rs  error.rs  mod.rs
backend/src/models/: api.rs  bob.rs  mod.rs  shared.rs
backend/src/services/: api.rs  auth.rs  methods.rs  mod.rs
bob-management-server/: Cargo.toml
bob-management-server/src/: main.rs
bob-management-server/src/routes/: mod.rs
bob-management-server/src/routes/auth/: login.rs  mod.rs
bob-management-server/src/routes/cluster/: index.rs  mod.rs
bob-management-server/src/services/: mod.rs
bob-management-server/src/services/bob/: mod.rs  node.rs
bob-management-server/src/storages/: mod.rs  session_data_storage.rs
bob-management-server/templates/auth/: login.html.tera
bob-management-server/templates/cluster/: index.html.tera
bob-management-server/templates/index/: index.html.tera
bob-management-server/templates/shared/: base.html.tera  nav.html.tera
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  config.rs  lib.rs
dockerfiles/alpine/: Dockerfile  Dockerfile.dev
frontend/: .eslintrc.cjs  .gitignore  Cargo.toml  astro.config.mjs  bindings.rs  build.rs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  turbo-router.js
frontend/src/components/: Context.ts  Counter.tsx  common.ts
frontend/src/components/NodePage/: NodePage.module.css  NodePage.tsx
frontend/src/components/VDiskList/: VDiskList.tsx
frontend/src/components/VDiskTable/: VDiskTable.module.css  VDiskTable.tsx
frontend/src/components/backdrop/: backdrop.tsx
frontend/src/components/clusterRpsChart/: clusterRpsChart.tsx
frontend/src/components/crudChart/: crudChart.tsx
frontend/src/components/currentRps/: currentRps.module.css  currentRps.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/diskPie/: diskPie.tsx
frontend/src/components/diskState/: diskState.module.css  diskState.tsx
frontend/src/components/diskTable/: diskTable.tsx
frontend/src/components/login/: Login.tsx  login.module.css
frontend/src/components/navbar/: Navbar.tsx  navbar.module.css
frontend/src/components/nodeList/: nodeList.module.css  nodeList.tsx
frontend/src/components/nodeTable/: nodeTable.tsx
frontend/src/components/nodeVDisks/: nodeVDisks.module.css  nodeVDisks.tsx
frontend/src/components/popovers/: nodeSettings.tsx  rawMetrics.tsx
frontend/src/components/systemChar/: systemChar.tsx
frontend/src/components/totalNodes/: totalNodes.module.css  totalNodes.tsx
frontend/src/containers/: Home.tsx
frontend/src/layouts/: DefaultTheme.ts  Layout.astro  ThemeRegistry.tsx
frontend/src/pages/: count.astro  index.astro
frontend/src/pages/dashboard/: index.astro
frontend/src/pages/login/: index.astro
frontend/src/pages/nodelist/: index.astro
frontend/src/pages/vdisklist/: index.astro
frontend/src/pages/vdiskslist/: index.astro  page.module.css
frontend/src/types/: common.ts  context.ts  data.d.ts  navigation.ts  rust.d.ts
frontend/tests/: example.spec.ts
proc-macro/: Cargo.toml
proc_macro/src/: lib.rs
utils/: Cargo.toml  gen_openapi.rs
