[package]
name = "bob_management"
version.workspace = true
default-run = "backend"
edition = "2021"
description = "Bob Management GUI"
authors = ["Romanov Simeon ArchArcheoss@proton.me"]
license = "Unlicense"
repository = "https://github.com/qoollo/bob-management"
publish = false
keywords = [ "BOB", "Management", "GUI" ]
readme = "./README.md"

[workspace.package]
version = "0.0.0"   # Bob GUI version

# Force frontend build
[[bin]]
name = "frontend"
path = "frontend/build.rs"
required-features = [ "frontend" ]

[[bin]]
name = "backend"
path = "backend/src/main.rs"
required-features = [ "backend" ]

[build-dependencies]
# Frontend
tsync = { version = "2", optional = true }

[dependencies]
# Frontend (for `cargo frontend` command to force frontend rebuild)
tsync = { version = "2", optional = true }

# CLI
cli = { path = "./cli", optional = true }

# Backend Lib
backend = { path = "./backend", optional = true }

# Backend main deps.
tokio = { version = "1.32", features = ["rt", "macros", "rt-multi-thread"], optional = true }
error-stack = { version = "0.4.1", optional = true }
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors"], optional = true } 
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[workspace]
members = [ "cli", "backend" ]

[features]
# default = [ "frontend", "swagger" ] 
default = [ "frontend", "swagger", "backend" ] 
frontend = [ "dep:tsync" ]
backend = [ "dep:backend", "dep:axum", "dep:tracing", "dep:tracing-subscriber", "dep:tower-http", "dep:tower", "dep:error-stack", "dep:tokio", "dep:cli" ]
swagger = [ "backend?/swagger" ]

[profile.dev]
debug-assertions = true

[profile.release]
# Optimize for size
# opt-level = "s"
# Optimize for speed
opt-level = 3 

# Slightly increase perfomance and reduce binary size
panic = "abort"

[profile.release-lto]
inherits = "release"
# Link Time optimization, causes a bit longer compilation
lto = true
# Maximize size reduction optimization, causes longer compilation
codegen-units = 1 

[profile.min-size]
inherits = "release"
opt-level = "s"
