[package]
name = "backend"
edition = "2021"
version.workspace = true
description = "Bob Management GUI: Backend"
authors = ["Romanov Simeon ArchArcheoss@proton.me"]
license = "Unlicense"
repository = "https://github.com/qoollo/bob-management"
publish = false
keywords = [ "BOB", "Management", "GUI" ]
readme = "./README.md"
autobins = false

[dependencies]
# Backend (lib.rs)
## Axum related
axum = "0.6"
axum-macros = "0.3"
axum-login = "0.6"
axum-sessions = "0.5"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

## Logging
tracing = "0.1"

## Error Handling
error-stack = "0.4"

## General
tokio = { version = "1.32", features = ["rt", "macros"] }
hyper = "0.14"

## OpenAPI + Swagger
utoipa = { version = "3.4", features = ["axum_extras",  "chrono", "openapi_extensions"], optional = true }
utoipa-swagger-ui = { version = "3.1", features = ["axum"], optional = true }
utoipa-redoc = { version = "0.1", features = ["axum"], optional = true }
utoipa-rapidoc = { version = "0.1", features = ["axum"], optional = true }

## CLI
cli = { path = "../cli" }

[features]
swagger = [ "utoipa", "utoipa-swagger-ui" , "utoipa-redoc", "utoipa-rapidoc" ]

