[package]
name = "bob-management-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "*"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]