[package]
name = "bob-management-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
jsonwebtoken = "7.2"
log = "0.4"
time = "0.2.27"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]