[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "3.3"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"

# Error Handling
color-eyre = "0.6"

# CLI
clap = { version = "4.3", features = ["derive"] }


