[package]
name = "cli"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#Proc-macro
build-time = "0.1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "3.3"
humantime-serde = "1.1"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"

# Error Handling
error-stack = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

build-time = "0.1"

lazy_static="1.4"
