[package]
name = "frontend"
build = "build.rs"
version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "frontend"
path = "build.rs"
required-features = [ "dummy" ]

[build-dependencies]
tsync = "2"

[features]
dummy = [ ]

